--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,13 +62,13 @@ custom-primitive = []
 default-surface = ["dep:pollster"]
 
 [dependencies]
-rootvg-core = { path = "crates/rootvg-core", default-features = false }
-rootvg-image = { path = "crates/rootvg-image", optional = true }
-rootvg-mesh = { path = "crates/rootvg-mesh", default-features = false, optional = true }
-rootvg-msaa = { path = "crates/rootvg-msaa", optional = true }
-rootvg-quad = { path = "crates/rootvg-quad", default-features = false, optional = true }
-rootvg-tessellation = { path = "crates/rootvg-tessellation", default-features = false, optional = true }
-rootvg-text = { path = "crates/rootvg-text", optional = true }
+rootvg-core = { version = "0.1", path = "crates/rootvg-core", default-features = false }
+rootvg-image = { version = "0.1", path = "crates/rootvg-image", optional = true }
+rootvg-mesh = { version = "0.1", path = "crates/rootvg-mesh", default-features = false, optional = true }
+rootvg-msaa = { version = "0.1", path = "crates/rootvg-msaa", optional = true }
+rootvg-quad = { version = "0.1", path = "crates/rootvg-quad", default-features = false, optional = true }
+rootvg-tessellation = { version = "0.1", path = "crates/rootvg-tessellation", default-features = false, optional = true }
+rootvg-text = { version = "0.1", path = "crates/rootvg-text", optional = true }
 pollster = { version = "0.3.0", optional = true }
 rustc-hash.workspace = true
 log.workspace = true
