--- a/crates/rootvg-quad/Cargo.toml
+++ b/crates/rootvg-quad/Cargo.toml
@@ -17,7 +17,7 @@ default = ["gradient"]
 gradient = ["rootvg-core/gradient"]
 
 [dependencies]
-rootvg-core = { path = "../rootvg-core", default-features = false }
+rootvg-core = { version = "0.1", path = "../rootvg-core", default-features = false }
 wgpu.workspace = true
 thiserror.workspace = true
 bytemuck.workspace = true
