--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,7 +78,7 @@ wgpu.workspace = true
 
 [dev-dependencies]
 winit.workspace = true
-wgpu = { version = "0.19" }
+wgpu = { version = "0.20" }
 pollster = "0.3.0"
 env_logger.workspace = true
 bytemuck.workspace = true
@@ -90,10 +90,11 @@ rgb = "0.8.37"
 smallvec = "1.13.1"
 rustc-hash = "1.1.0"
 euclid = { version = "0.22.9", default-features = false }
-wgpu = { version = "0.19.3", default-features = false, features = ["wgsl"] }
+wgpu = { version = "0.20.0", default-features = false, features = ["wgsl"] }
 bytemuck = { version = "1.14.1", features = ["derive"] }
 log = "0.4.21"
-winit = { version = "0.29.10", features = ["rwh_05"] }
+#winit = { version = "0.29.10", features = ["rwh_05"] }
+winit = { version = "0.30.0", features = ["rwh_05"] }
 env_logger = "0.11.3"
 thiserror = "1.0.57"
 half = "2.3.1"
