--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,7 +94,7 @@ wgpu = { version = "0.20.0", default-features = false, features = ["wgsl"] }
 bytemuck = { version = "1.14.1", features = ["derive"] }
 log = "0.4.21"
 #winit = { version = "0.29.10", features = ["rwh_05"] }
-winit = { version = "0.30.0", features = ["rwh_05"] }
+winit = { version = "0.30.0" }
 env_logger = "0.11.3"
 thiserror = "1.0.57"
 half = "2.3.1"
