--- a/crates/rootvg-text/Cargo.toml
+++ b/crates/rootvg-text/Cargo.toml
@@ -17,6 +17,6 @@ rootvg-core = { version = "0.1", path = "../rootvg-core", default-features = fal
 wgpu.workspace = true
 thiserror.workspace = true
 bytemuck.workspace = true
-once_cell = "1.19.0"
+#once_cell = "1.19.0"
 #glyphon = "0.5.0"
 glyphon = { git = "https://github.com/grovesNL/glyphon", rev = "670140e2a1482a1ad3607dead44c40d8261ba582" }
