--- a/crates/rootvg-mesh/Cargo.toml
+++ b/crates/rootvg-mesh/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rootvg-mesh"
-version = "0.2.1"
+version = "0.2.2"
 description = "Mesh primitives for RootVG"
 edition.workspace = true
 authors.workspace = true
@@ -15,6 +15,7 @@ keywords.workspace = true
 [features]
 default = []
 gradient = ["rootvg-core/gradient"]
+serde = ["rootvg-core/serde"]
 
 [dependencies]
 rootvg-core = { version = "0.2", path = "../rootvg-core", default-features = false }
