fix serde support in rootvg-msaa

--- a/crates/rootvg-msaa/Cargo.toml
+++ b/crates/rootvg-msaa/Cargo.toml
@@ -12,6 +12,9 @@ keywords.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+serde = ["dep:serde", "rootvg-core/serde"]
+
 [dependencies]
 rootvg-core = { version = "0.2", path = "../rootvg-core", default-features = false }
 wgpu.workspace = true
