--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,7 +100,7 @@ image = { version = "0.25.0", default-features = false, features = ["rayon", "pn
 [workspace.dependencies]
 rgb = "0.8.37"
 smallvec = "1.13.1"
-rustc-hash = "2.0.0"
+rustc-hash = "2.0"
 euclid = { version = "0.22.9", default-features = false }
 wgpu = { version = "22", default-features = false, features = ["wgsl"] }
 bytemuck = { version = "1.14.1", features = ["derive"] }
@@ -109,6 +109,7 @@ winit = { version = "0.30.0" }
 env_logger = "0.11.3"
 thiserror = "1.0.57"
 half = "2.3.1"
+bitflags = "2.6"
 
 [[example]]
 name = "custom_primitive"
