--- a/crates/rootvg-core/Cargo.toml
+++ b/crates/rootvg-core/Cargo.toml
@@ -13,9 +13,14 @@ keywords.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["gradient"]
+default = ["gradient", "web-colors"]
 gradient = ["dep:half"]
 serde = ["dep:serde", "rgb/serde", "euclid/serde"]
+# Enables broken "sRGB linear" blending to reproduce color management of the Web.
+# Recommended for better text legibility.
+# See: https://github.com/iced-rs/iced/pull/1888
+#      https://github.com/pop-os/cosmic-text/issues/195
+web-colors = []
 
 [dependencies]
 wgpu.workspace = true
