--- a/crates/rootvg-msaa/Cargo.toml
+++ b/crates/rootvg-msaa/Cargo.toml
@@ -13,7 +13,13 @@ keywords.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
+default = ["web-colors"]
 serde = ["dep:serde", "rootvg-core/serde"]
+# Enables broken "sRGB linear" blending to reproduce color management of the Web.
+# Recommended for better text legibility.
+# See: https://github.com/iced-rs/iced/pull/1888
+#      https://github.com/pop-os/cosmic-text/issues/195
+web-colors = ["rootvg-core/web-colors"]
 
 [dependencies]
 rootvg-core = { version = "0.3", path = "../rootvg-core", default-features = false }
