--- a/crates/rootvg-tessellation/Cargo.toml
+++ b/crates/rootvg-tessellation/Cargo.toml
@@ -13,9 +13,14 @@ keywords.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["gradient"]
+default = ["gradient", "web-colors"]
 gradient = ["rootvg-core/gradient", "rootvg-mesh/gradient"]
 serde = ["dep:serde", "lyon/serialization", "rootvg-core/serde"]
+# Enables broken "sRGB linear" blending to reproduce color management of the Web.
+# Recommended for better text legibility.
+# See: https://github.com/iced-rs/iced/pull/1888
+#      https://github.com/pop-os/cosmic-text/issues/195
+web-colors = ["rootvg-core/web-colors", "rootvg-mesh/web-colors"]
 
 [dependencies]
 rootvg-core = { version = "0.3", path = "../rootvg-core", default-features = false }
